Filter unsupported --sun-misc-unsafe-memory-access JVM arg for Java < 23
Mojang's newer version JSONs include --sun-misc-unsafe-memory-access=allow
(JEP 471, introduced in Java 23). PMCL launches with Java 21, causing
"Unrecognized option" → JVM creation failure → game exits with code=1.

Filter out this arg when the runtime Java major version is < 23.